@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix out-of-bounds accessess to xxx_bonus[] (and similar) arrays.
+Andreas Kirschbaum
+
+common/living.c:
 random_maps/wall.c, random_maps/style.c, random_maps/door.c, random_maps/exit.c,
   random_maps/random_map.c, random_maps/rogue_layout.c, random_maps/test.c,
   random_maps/special.c, random_maps/floor.c, random_maps/monster.c,
